--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   logger: ^1.1.0
+  provider: ^6.0.3
   firebase_core: ^2.14.0
   cloud_firestore: ^4.13.0
   # The following adds the Cupertino Icons font to your application.
